--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $blue: #0D6EFD;
 $yellow: #ffd61f;
-$orange: #e9b657;
+$orange: #ffe053;
 $red: #ce9b3c;
 $green: #1EDD88;
 $light-gray: #d8d8d8;
