--- a/app/assets/stylesheets/pages/bets/_new.scss
+++ b/app/assets/stylesheets/pages/bets/_new.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
 }
 
-.bet-team {
+.bet-team-1, .bet-team-2 {
   width: 30%;
   height: 300px;
   padding-top: 24px;
@@ -102,4 +102,37 @@
   color: $black;
   border-width: 0;
   border-radius: 6px;
+}
+
+@media screen and (max-width: 1000px) {
+  .last-five-matches {
+    display: none;
+  }
+
+  .last-five-dates {
+    display: none;
+  }
+
+  .last-five-matches-title {
+    display: none;
+  }
+
+  .new-bet-card {
+    position: absolute;
+    top: 90px;
+    min-height: 240px;
+    width: 100%;
+  }
+
+  .bet-team-1 {
+    position: absolute;
+    top: 180px;
+    left: 0;
+  }
+
+  .bet-team-2 {
+    position: absolute;
+    top: 180px;
+    right: 0;
+  }
 }
