--- a/app/assets/stylesheets/pages/matchweeks/_show.scss
+++ b/app/assets/stylesheets/pages/matchweeks/_show.scss
@@ -12,6 +12,27 @@ a {
   justify-content: space-between;
 }
 
+.matchweek-header-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  a {
+    width: 50px;
+    height: 100%;
+    text-align: center;
+  }
+}
+
+.matchweek-back-button {
+  margin-right: 24px;
+  border: 1px solid $yellow;
+  border-radius: 50%;
+  i {
+    font-size: 30px;
+    padding: 9px;
+  }
+}
+
 .headers-buttons {
   width: 240px;
   display: flex;
@@ -21,10 +42,11 @@ a {
 
 .back-button {
   width: 60px;
-  background: $black-linear;
-  border-radius: 6px;
+  background: $black;
+  border: 1px solid $yellow;
+  border-radius: 30px;
   a {
-    color: $white;
+    color: $yellow;
   }
 }
 
@@ -39,10 +61,11 @@ a {
 
 .next-button {
   width: 60px;
-  background: $black-linear;
-  border-radius: 6px;
+  background: $black;
+  border: 1px solid $yellow;
+  border-radius: 30px;
   a {
-    color: $white;
+    color: $yellow;
   }
 }
 
@@ -67,6 +90,7 @@ a {
   justify-content: center;
   height: 808px;
   width: 100%;
+  overflow: auto;
   // border-radius: 6px;
 }
 
@@ -108,6 +132,9 @@ a {
   border-radius: 6px;
   border: 1px solid $dark-gray;
   margin: 12px;
+  h4 {
+    color: $yellow;
+  }
 }
 
 .bottom-score {
@@ -116,4 +143,10 @@ a {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 12px;
+}
+
+@media screen and (max-width: 600px) {
+  .headers-buttons {
+    width: 150px;
+  }
 }
