--- a/app/assets/stylesheets/pages/rooms/_rooms.scss
+++ b/app/assets/stylesheets/pages/rooms/_rooms.scss
@@ -62,11 +62,41 @@
 
 .messagebar-container {
   position: absolute;
-  bottom: 16px;
-  right: 65px;
-  width: 70%;
+  bottom: 12px;
+  right: 0;
+  width: 100%;
 }
 
 .chat-box-container {
   justify-content: space-between;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .chat-container {
+    margin: 0;
+  }
+
+  .chat-left {
+    display: none;
+  }
+
+  .chat-right {
+    width: 100%;
+    height: 85vh;
+  }
+
+  .messagebar-container {
+    bottom: 24px;
+  }
+
+  .chat-box-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .messagebar-container {
+    bottom: 0;
+  }
 }
