--- a/app/assets/stylesheets/pages/seasons/_show.scss
+++ b/app/assets/stylesheets/pages/seasons/_show.scss
@@ -3,18 +3,21 @@
  }
 
  .league-card {
-  background: $yellow;
+  background: $black;
   width: 33%;
+  min-width: 240px;
   margin: 0 auto;
   text-align: center;
-  border-radius: 6px;
-  border: 1px solid $black;
+  border-radius: 24px;
+  border: 1px solid $yellow;
   padding-top: 2px;
+  padding-left: 12px;
+  padding-right: 12px;
   a {
-    color: $dark-gray;
+    color: $yellow;
   }
   a:hover {
-    color: $black;
+    color: $orange;
   }
   h2 {
     margin: 0;
