--- a/app/views/bets/new.html.erb
+++ b/app/views/bets/new.html.erb
@@ -1,8 +1,8 @@
 <div class="my-container">
   <div class="bet-container">
-    <div class="bet-team">
+    <div class="bet-team-1">
       <%= cl_image_tag @match.team_home.photo.key, height: 96, width: 72, crop: :fit %>
-      <h3>5 DERNIERS MATCHES</h3>
+      <h3 class="last-five-matches-title">5 DERNIERS MATCHES</h3>
       <div class="last-five-matches">
         <% @matches_home.each do |match| %>
           <div class="last-five-card">
@@ -36,9 +36,9 @@
         <% end %>
       </div>
 
-    <div class="bet-team">
+    <div class="bet-team-2">
       <%= cl_image_tag @match.team_away.photo.key, height: 96, width: 72, crop: :fit %>
-      <h3>5 DERNIERS MATCHES</h3>
+      <h3 class="last-five-matches-title">5 DERNIERS MATCHES</h3>
       <div class="last-five-matches">
         <% @matches_away.each do |match| %>
           <div class="last-five-card">
