--- a/app/views/matchweeks/show.html.erb
+++ b/app/views/matchweeks/show.html.erb
@@ -1,6 +1,11 @@
 <div class="my-container">
   <div class="matchweek-header">
-    <h1>Journée <%= @matchweek.number %></h1>
+    <div class="matchweek-header-title">
+      <%= link_to league_path(@league), class:"matchweek-back-button" do %>
+        <i class="fa-solid fa-arrow-rotate-left"></i>
+      <% end %>
+      <h1>Journée <%= @matchweek.number %></h1>
+    </div>
     <div class="headers-buttons">
       <div class="back-button">
         <%= link_to @matchweek.previous, class: "back-link" do %>
