--- a/app/assets/stylesheets/pages/invitations/_index.scss
+++ b/app/assets/stylesheets/pages/invitations/_index.scss
@@ -2,7 +2,7 @@
   height: 40vh;
   width: 100%;
   background: $black-linear;
-  margin-top: 48px;
+  // margin-top: 48px;
   border-radius: 6px;
   color: $white;
 }
