--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -45,10 +45,10 @@
             <p><%= index + 1 %></p>
           </div>
           <div class="column-2">
-            <p><strong><%= team.name %></strong></p>
+            <p><%= team.name %></p>
           </div>
           <div class="column-3">
-            <p><strong><%= team.points %></strong></p>
+            <p><%= team.points %></p>
           </div>
           <div class="column-1">
             <p><%= team.victories + team.defeats + team.draws %></p>
