--- a/app/views/matchweeks/show.html.erb
+++ b/app/views/matchweeks/show.html.erb
@@ -4,7 +4,7 @@
       <%= link_to league_path(@league), class:"matchweek-back-button" do %>
         <i class="fa-solid fa-arrow-rotate-left"></i>
       <% end %>
-      <h1>Journée <%= @matchweek.number %></h1>
+      <h1># <%= @matchweek.number %></h1>
     </div>
     <div class="headers-buttons">
       <div class="back-button">
