--- a/app/views/layouts/_new_message_form.html.erb
+++ b/app/views/layouts/_new_message_form.html.erb
@@ -1,6 +1,6 @@
 <div class="messagebar-container">
   <%= form_with(model: [@single_room ,@message], remote: true, class: "messagebar", data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }) do |f| %>
     <%= f.text_field :content, id: 'chat-text', class: "form-control msg-content", autocomplete: 'off' %>
-    <%= f.submit data: { disable_with: false }, class: "btn btn-primary" %>
+    <%= f.submit data: { disable_with: false }, class: "btn btn-primary", value: "Envoyer" %>
   <% end %>
 </div>
