--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -1,4 +1,10 @@
 <div class="my-container">
+  <div class="seasons-header">
+    <%= link_to root_path, class:"league-back-button" do %>
+      <i class="fa-solid fa-arrow-rotate-left"></i>
+    <% end %>
+    <h1>SAISONS</h1>
+  </div>
   <div class="season-cards">
     <% @seasons.each do |season| %>
       <div class="season-card">
