--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -1,5 +1,11 @@
 
 <div class="my-container">
+  <div class="seasons-header">
+    <%= link_to seasons_path, class:"league-back-button" do %>
+      <i class="fa-solid fa-arrow-rotate-left"></i>
+    <% end %>
+    <h1>LIGUES</h1>
+  </div>
   <div class="league-cards">
     <% @leagues.each do |league| %>
       <div class="league-card">
