--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           <li class="nav-item dropdown dropdown-perso">
             <%= image_tag "menu.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end dropdown-perso" aria-labelledby="navbarDropdown">
-              <%= link_to "Messages", users_path, class: "dropdown-item dropdown-item-perso" %>
+              <%= link_to "Messages", messenger_path, class: "dropdown-item dropdown-item-perso" %>
               <%= link_to "Parier", seasons_path, class: "dropdown-item dropdown-item-perso" %>
               <%= link_to "Me déconnecter", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item dropdown-item-perso" %>
             </div>
