--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,4 +8,4 @@
 @import "./invitations/index";
 @import "./users/show";
 @import "./rooms/rooms";
-@import "./notifications/index.scss";
+@import "./notifications/index.html"
