--- a/app/assets/stylesheets/pages/bets/_new.scss
+++ b/app/assets/stylesheets/pages/bets/_new.scss
@@ -19,6 +19,11 @@
   h3 {
     margin-top: 12px;
   }
+  h5 {
+    margin-top: 12px;
+    margin-bottom: 24px;
+    color: $white;
+  }
 }
 
 .last-five-matches {
@@ -81,6 +86,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  p {
+    margin-top: 30px;
+    margin-left: 20%;
+    margin-right: 20%;
+    text-align: center;
+    color: $white;
   }
 }
 
