--- a/app/assets/stylesheets/pages/leagues/_show.scss
+++ b/app/assets/stylesheets/pages/leagues/_show.scss
@@ -96,6 +96,30 @@
   padding: 12px;
 }
 
+.tooltip-c {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip-c .tooltiptext {
+  visibility: hidden;
+  background-color: $yellow;
+  color: $black;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  font-size: 10px;
+
+  /* Position the tooltip */
+  padding-left: 6px;
+  padding-right: 6px;
+  bottom: 100%;
+}
+
+.tooltip-c:hover .tooltiptext {
+  visibility: visible;
+}
+
 .nextmatch-card-top {
   display: flex;
   align-items: center;
