fixes made on the devise views

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -8,4 +8,5 @@
 @import "./invitations/index";
 @import "./users/show";
 @import "./rooms/rooms";
-@import "./notifications/index.html"
+@import "./notifications/index.html";
+@import "./devise/session_new"
