--- a/app/views/shared/_nextmatch-card.html.erb
+++ b/app/views/shared/_nextmatch-card.html.erb
@@ -24,34 +24,40 @@
   </div>
 <% else %>
   <% if Bet.where(match: nextmatch, user: current_user).exists? %>
-    <div class="nextmatch-card">
-      <div class="nextmatch-card-top">
-        <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
-        <h4>-</h4>
-        <%= cl_image_tag Team.find(nextmatch.team_away_id).photo.key, height: 48, width: 36, crop: :fit %>
-      </div>
-      <div class="nextmatch-card-bottom">
-        <p><%= nextmatch.date.strftime('%A').chars.first(3).join %> <%= nextmatch.date.day %>/<%= nextmatch.date.month %></p>
-        <div class="nextmatch-prono">
-          <p>Prono: <%= Bet.where(match: nextmatch, user: current_user).last.prono %></p>
-        </div>
-      </div>
-    </div>
-  <% else %>
-    <%= link_to new_match_bet_path(nextmatch) do %>
+    <div class="tooltip-c">
+      <span class="tooltiptext"><%= nextmatch.team_home.name %> - <%= nextmatch.team_away.name %></span>
       <div class="nextmatch-card">
         <div class="nextmatch-card-top">
-            <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
+          <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
           <h4>-</h4>
           <%= cl_image_tag Team.find(nextmatch.team_away_id).photo.key, height: 48, width: 36, crop: :fit %>
         </div>
         <div class="nextmatch-card-bottom">
           <p><%= nextmatch.date.strftime('%A').chars.first(3).join %> <%= nextmatch.date.day %>/<%= nextmatch.date.month %></p>
           <div class="nextmatch-prono">
-            <p>Nouveau prono</p>
+            <p>Prono: <%= Bet.where(match: nextmatch, user: current_user).last.prono %></p>
           </div>
         </div>
       </div>
-    <% end %>
+    </div>
+  <% else %>
+    <div class="tooltip-c">
+    <span class="tooltiptext"><%= nextmatch.team_home.name %> - <%= nextmatch.team_away.name %></span>
+      <%= link_to new_match_bet_path(nextmatch) do %>
+        <div class="nextmatch-card">
+          <div class="nextmatch-card-top">
+              <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
+            <h4>-</h4>
+            <%= cl_image_tag Team.find(nextmatch.team_away_id).photo.key, height: 48, width: 36, crop: :fit %>
+          </div>
+          <div class="nextmatch-card-bottom">
+            <p><%= nextmatch.date.strftime('%A').chars.first(3).join %> <%= nextmatch.date.day %>/<%= nextmatch.date.month %></p>
+            <div class="nextmatch-prono">
+              <p>Nouveau prono</p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
   <% end %>
 <% end %>
