fixed mobile view for prono page and took into account only done bets for average

--- a/app/assets/stylesheets/pages/bets/_new.scss
+++ b/app/assets/stylesheets/pages/bets/_new.scss
@@ -137,13 +137,21 @@
 
   .bet-team-1 {
     position: absolute;
-    top: 270px;
+    top: 360px;
     left: 0;
+    width: 180px;
+    h3 {
+      font-size: 18px;
+    }
   }
 
   .bet-team-2 {
     position: absolute;
-    top: 270px;
+    top: 360px;
     right: 0;
+    width: 180px;
+    h3 {
+      font-size: 18px;
+    }
   }
 }
