--- a/app/views/bets/new.html.erb
+++ b/app/views/bets/new.html.erb
@@ -41,7 +41,7 @@
           <%= form.text_field :prono, class: "bet-form-input" %>
           <%= form.submit "GO", class: "bet-form-submit" %>
         <% end %>
-        <p>Entrez votre prono dans le format suivant : "0 2", "1/0", "3-3"...</p>
+        <p>FORMAT : "0 2", "1/0", "3-3"...</p>
       </div>
 
     <div class="bet-team-2">
