shortened the user journey removing the season index

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="my-container">
     <div class="menu">
       <div class="menu-link">
-        <%= link_to seasons_path do %>
+        <%= link_to season_path(Season.last) do %>
           <h2>PARIER</h2>
         <% end %>
       </div>
